# MedForge

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  medforge-spec.md
.claude/commands/: rebuild.md
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2474ec93cdb5_initial_schema.py  a1b2c3d4e5f6_drop_gpu_active.py  b2c3d4e5f607_exposure_v2_split.py  c3d4e5f60718_add_ssh_fields.py  d4e5f6071829_widen_competition_description.py
apps/api/app/: __init__.py  api_contract.py  competition_policy.py  config.py  database.py  deps.py  http_contract.py  main.py  models.py  pagination.py  problem_details.py  rate_limit.py  schemas.py  scoring.py  security.py  seed.py  services.py  session_lifecycle.py  session_recovery.py  session_repo.py  session_runtime.py  storage.py  system_metrics.py  util.py  worker.py
apps/api/app/routers/: admin.py  auth.py  competitions.py  control_plane.py  status.py
apps/api/app/routers/competitions/: __init__.py  admin.py  catalog.py  dependencies.py  errors.py  leaderboard.py  mappers.py  public.py  queries.py  submission_records.py  submissions.py
apps/api/app/scoring/: __init__.py  competition_parsers.py  competition_specs.py  csv_io.py  manifest.py  metrics.py  pipeline.py  types.py
apps/api/app/session_runtime/: __init__.py  factory.py  ports.py  service.py  types.py
apps/api/app/session_runtime/adapters/: __init__.py  _docker_errors.py  docker_container.py  docker_inspect.py  docker_start.py  docker_stop.py  mock.py  zfs_workspace.py
apps/api/data/competitions/cifar-100-classification/: manifest.json
apps/api/data/competitions/rsna-pneumonia-detection/: holdout_labels.csv  manifest.json
apps/api/data/competitions/titanic-survival/: holdout_labels.csv  manifest.json
apps/api/data/public-eval/cifar-100-classification/: manifest.json
apps/api/data/public-eval/oxford-pet-segmentation/: manifest.json
apps/api/data/scoring-holdouts/cifar-100-classification/: holdout_labels.csv
apps/api/data/scoring-holdouts/oxford-pet-segmentation/: holdout_labels.csv
apps/api/data/scoring-holdouts/rsna-pneumonia-detection/: holdout_labels.csv
apps/api/migrations/: 0001_competitions_alpha.sql  0002_competitions_hardening.sql  0003_auth_and_session_core.sql  0004_competitions_scoring_policy.sql
apps/api/tests/: conftest.py  test_api.py  test_auth_hardening.py  test_chaos.py  test_concurrency.py  test_config_data_isolation.py  test_control_plane.py  test_helpers.py  test_invariants.py  test_isolation.py  test_load.py  test_log_schema.py  test_main_lifecycle.py  test_poller_sla.py  test_scoring.py  test_session_recovery.py  test_session_runtime_contract.py  test_session_runtime_resources.py
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
datasets/cifar-100/: sample_submission.csv  test_ids.csv  train_labels.csv
datasets/rsna-pneumonia-detection/: detailed_class_info.csv  sample_submission.csv  test_ids.csv  train_labels.csv
datasets/titanic-kaggle/: train.csv
deploy/caddy/: Caddyfile
deploy/compose/: .env.example  docker-compose.dev.yml  docker-compose.yml
docs/: api-deprecations.md  architecture.md  auth-routing.md  build-gates.md  competitions.md  data-model.md  dataset-formats.md  gate-checking-strategy.md  host-validation-2026-02-16.md  implementation-checklist.md  issue-plan.md  overview.md  phase-checking-strategy.md  runbook.md  sessions.md  validation-logs.md
infra/caddy/: Caddyfile  Dockerfile
infra/compose/: .env  .env.example  docker-compose.yml
infra/firewall/: setup.sh
infra/host/: bootstrap-easy.sh  ops-cleanup.sh  ops-reconcile.sh  ops-snapshots.sh  (+2 more)
scripts/: generate_cifar100_holdout.py  prepare_titanic_real_holdout.py
(+26804 files in other folders)
