[project]
name = "medforge-api"
version = "0.1.0"
description = "MedForge competition and session control API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "pymysql>=1.1.1,<2.0.0",
  "alembic>=1.14.0,<2.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "bcrypt>=4.2.0,<5.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "cryptography>=43.0.0,<47.0.0",
  "docker>=7.1.0,<8.0.0",
  "structlog>=24.4.0,<26.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psutil>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<10.0.0",
  "pytest-xdist>=3.6.0,<4.0.0",
  "pytest-asyncio>=0.24.0,<2.0.0",
  "pytest-cov>=5.0.0,<8.0.0",
  "coverage[toml]>=7.6.0,<8.0.0",
  "factory-boy>=3.3.0,<4.0.0",
  "respx>=0.21.0,<1.0.0",
  "rich>=13.8.0,<15.0.0",
  "testcontainers[mysql]>=4.0.0,<5.0.0",
]
lint = [
  "ruff>=0.6.0,<0.16.0",
  "mypy>=1.11.0,<2.0.0",
  "pre-commit>=3.8.0,<5.0.0",
  "types-passlib>=1.7.7,<2.0.0",
]
ml = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "torchaudio>=2.6.0",
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<4.0.0",
  "scipy>=1.14.0,<2.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "pydicom>=3.0.0,<4.0.0",
  "nibabel>=5.3.0,<6.0.0",
  "SimpleITK>=2.4.0,<3.0.0",
  "opencv-python-headless>=4.10.0,<5.0.0",
  "Pillow>=10.4.0,<13.0.0",
  "matplotlib>=3.9.0,<4.0.0",
  "seaborn>=0.13.0,<1.0.0",
  "jupyterlab>=4.2.0,<6.0.0",
  "ipywidgets>=8.1.0,<9.0.0",
  "transformers>=4.44.0,<6.0.0",
  "timm>=1.0.0,<2.0.0",
  "albumentations>=1.4.0,<3.0.0",
  "monai>=1.4.0,<2.0.0",
  "h5py>=3.11.0,<4.0.0",
  "pyarrow>=17.0.0,<24.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "tqdm>=4.66.0,<5.0.0",
  "tensorboard>=2.17.0,<3.0.0",
  "xgboost>=2.1.0,<4.0.0",
  "lightgbm>=4.5.0,<5.0.0",
]
download = [
  "kaggle>=1.6.0,<3.0.0",
  "gdown>=5.2.0,<6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["docker.*", "pydicom.*", "nibabel.*", "SimpleITK.*", "monai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true


# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "docker: tests requiring real Docker runtime (deselect with -m 'not docker')",
  "load: load/soak tests run manually (deselect with -m 'not load')",
]
filterwarnings = [
  "ignore:'crypt' is deprecated and slated for removal in Python 3\\.13:DeprecationWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
